# SwiftNet

./: .gitignore  README.md
.github/workflows/: run_all_tests.yml
src/: CMakeLists.txt  add_debug_flags.c  handle_packets.c  initialize_swift_net.c  process_packets.c  send_packet.c  swift_net.h
src/internal/: internal.h
tests/: shared.h
tests/integration_tests/output/: run_tests
tests/integration_tests/src/: run_tests.c
tests/performance_tests/output/: run_tests
tests/performance_tests/src/: main.c
tests/src/: run_tests.c
